# kvcachehackaton

./: global_vars.py  lmcache_config.yaml  newtest.py  roman_test.py  setup.sh  test.py  test2.py
LMCache/: .gitignore  README.md  format.sh  pyproject.toml  requirements.txt  setup.py
LMCache/.buildkite/: end-to-end-test.sh  multi-round-qa.sh  pipeline.yml
LMCache/.github/: PULL_REQUEST_TEMPLATE.md
LMCache/.github/workflows/: mypy.yaml  publish.yml
LMCache/benchmarks/multi-round-qa/: README.md  data_preprocessing.py  multi-round-qa.py
LMCache/benchmarks/rag/: precompute.py  rag.py  utils.py
LMCache/csrc/: ac_dec.cu  ac_enc.cu  cachegen_kernels.cuh  cal_cdf.cu  mem_kernels.cu  mem_kernels.cuh  pybind.cpp
LMCache/docker/: Dockerfile  Dockerfile.manylinux-cuda  example_run.sh
LMCache/docker/patch/: factory.py  lmcache_connector.py  parallel_state.patch
LMCache/docs/source/: conf.py  index.rst
LMCache/examples/blend_kv/: README.md  batched_kv.py  blend_kv.py
LMCache/examples/cache_controller/: README.md  example.yaml
LMCache/examples/cache_interface/: README.md
LMCache/examples/docker/: example.yaml  offline_inference.py
LMCache/examples/experimental/: example.yaml  offline_inference.py
LMCache/examples/kv_cache_calculator/: modelconfig.json
LMCache/examples/lmc_connector/: README.md  offline_inference.py
LMCache/examples/p2p/: README.md
LMCache/lmcache/: cache_engine.py  config.py  connections.py  logging.py  observability.py  protocol.py  usage_context.py  utils.py
LMCache/tests/: conftest.py  test_observability.py
(+107 files in other folders)
