[build-system]
# Should be mirrored in requirements-build.txt
requires = [
    "setuptools >= 49.4.0",
    "wheel",
    "packaging",
    "torch == 2.6.0",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Allow lines to be as long as 80.
line-length = 80


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # isort
    # "I",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]


[tool.mypy]
python_version = "3.10"

ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

# After fixing type errors resulting from follow_imports: "skip" -> "silent",
# move the directory here and remove it from format.sh and mypy.yaml
files = [
    "lmcache"
]

# use a custom manylinux image for cibuildwheel that contains CUDA 12.4
[tool.cibuildwheel]
manylinux-x86_64-image = "docker.io/apostab/manylinux-cuda124"
repair-wheel-command = """
auditwheel repair \
  --plat manylinux_2_17_x86_64 \
  --exclude libtorch.so \
  --exclude libtorch_cuda.so \
  --exclude libtorch_python.so \
  --exclude libtorch_cpu.so \
  --exclude libc10.so \
  --exclude libc10_cuda.so \
  -w {dest_dir} {wheel}
"""
